--- a/index.html
+++ b/index.html
@@ -7,5 +7,32 @@
 		<link rel="stylesheet" href="./styles/style.css" />
 		<title>Google</title>
 	</head>
-	<body></body>
+	<body>
+		<nav class="nav">
+			<ul class="nav__left">
+				<li>About</li>
+				<li>Store</li>
+			</ul>
+
+			<ul>
+				<li>Gmail</li>
+				<li>Images</li>
+			</ul>
+		</nav>
+		<main>
+			<div class="wrapper">
+				<div class="logo">
+					<img
+						src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png"
+						alt="Google Logo"
+					/>
+				</div>
+				<div class="search">
+					<input type="search" name="search" id="search" class="search-bar" />
+				</div>
+				<div class="btns"></div>
+			</div>
+		</main>
+		<footer></footer>
+	</body>
 </html>
