Add link tag to nav bar list

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 	<body>
 		<nav class="nav">
 			<ul class="nav__left">
-				<li>About</li>
-				<li>Store</li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Store</a></li>
 			</ul>
 
 			<ul>
-				<li>Gmail</li>
-				<li>Images</li>
+				<li><a href="#">Gmail</a></li>
+				<li><a href="#">Images</a></li>
 			</ul>
 		</nav>
 		<main>
