--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
 				<li><a href="#">About</a></li>
 				<li><a href="#">Store</a></li>
 			</ul>
+			<div class="nav__right">
+				<ul>
+					<li><a href="#">Gmail</a></li>
+					<li><a href="#">Images</a></li>
+				</ul>
 
-			<ul>
-				<li><a href="#">Gmail</a></li>
-				<li><a href="#">Images</a></li>
-			</ul>
+				<div class="nav__app-icons">
+					<a href="#"
+						><svg class="icon" focusable="false" viewBox="0 0 24 24">
+							<path
+								d="M6,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM6,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM12,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM16,6c0,1.1 0.9,2 2,2s2,-0.9 2,-2 -0.9,-2 -2,-2 -2,0.9 -2,2zM12,8c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,14c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2zM18,20c1.1,0 2,-0.9 2,-2s-0.9,-2 -2,-2 -2,0.9 -2,2 0.9,2 2,2z"
+							></path></svg
+					></a>
+				</div>
+			</div>
 		</nav>
 		<main>
 			<div class="wrapper">
