Make buttons for search, and style them

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
 						</svg>
 					</span>
 				</div>
-				<div class="btns"></div>
+				<div class="btns">
+					<a href="" class="btns__click">Google Search</a>
+					<a href="" class="btns__click">I'm feeling lucky</a>
+				</div>
 			</div>
 		</main>
 		<footer></footer>
