--- a/index.html
+++ b/index.html
@@ -80,6 +80,26 @@
 				</div>
 			</div>
 		</main>
-		<footer></footer>
+		<footer>
+			<div class="footer">
+				<div class="footer__left">
+					<ul>
+						<li><a href="">Advertising</a></li>
+						<li><a href="">Business</a></li>
+						<li><a href="">How Search works</a></li>
+					</ul>
+				</div>
+				<div class="footer__middle">
+					<a href="">Carbon Neutral since 2007</a>
+				</div>
+				<div class="footer__right">
+					<ul>
+						<li><a href="">Privacy</a></li>
+						<li><a href="">Terms</a></li>
+						<li><a href="">Settings</a></li>
+					</ul>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
