Took of capitalization of n from neutral

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 					</ul>
 				</div>
 				<div class="footer__middle">
-					<a href="">Carbon Neutral since 2007</a>
+					<a href="">Carbon neutral since 2007</a>
 				</div>
 				<div class="footer__right">
 					<ul>
